Bug 91366 - UI: Menu flicker
Summary: UI: Menu flicker
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta2
Keywords:
: 91465 91517 91573 91647 (view as bug list)
Depends on:
Blocks: RenderContext Flickering-UI
  Show dependency treegraph
 
Reported: 2015-05-18 23:38 UTC by Gordo
Modified: 2019-05-21 11:14 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gordo 2015-05-18 23:38:08 UTC
1. New Text Document.
2. View menu and move mouse up and down menu.
Result:
Flickering.

Affects all menus, even context menu.

Also, menu name is white when menu is open.

Windows Vista 64
Version: 5.0.0.0.alpha1+
Build ID: 60fb87cf6cfcbdb1a7ece00e8a2e9d1112903ed0
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-18_14:12:34
Comment 1 Buovjaga 2015-05-19 10:21:45 UTC
Confirmed.

Win 7 Pro 64-bit Version: 5.0.0.0.alpha1+
Build ID: 158b50763962f66515062300e265839828463efa
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-19_00:28:31
Locale: fi-FI (fi_FI)
Comment 2 pierre-yves samyn 2015-05-22 09:33:27 UTC
Hi

Confirmed on windows 7/64 & Version: 5.0.0.0.beta1
Build ID: 0a16c3dda4150008d9be6f24cbd15ac198d116d3
Locale : fr-FR (fr_FR)

Regards
Pierre-Yves
Comment 3 Guiu Rocafort 2015-05-22 10:19:14 UTC
Confirmed too in Windows 7/64 bits.
Versió: 5.0.0.0.beta1
ID de la construcció: 0a16c3dda4150008d9be6f24cbd15ac198d116d3
Configuració local: es-ES (es_ES)

A few comments. 
1. The bug is present not only in Writter, but in Calc, Impress, Math and Database.
2. The longer the menu, the worst the frickering in the bottom items. Probably this is happening because the menu is being shown while the menu items are still rendering.

Cheers
Guiu Rocafort
Comment 4 Commit Notification 2015-05-22 14:09:00 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=48a05b5b64e2f2c68f5ba013b9962390f0f85f0d

tdf#91366 - invalidate only individual menu items to render highlight.

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Meeks 2015-05-22 14:12:31 UTC
Not a VclPtr issue - so de-blocking my tracker; but fixed it anyway =)
Thanks.
Comment 6 Commit Notification 2015-05-22 14:30:35 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=55d052d2ae94522237206bc5ff260ea4ae037f96&h=libreoffice-5-0

tdf#91366 - invalidate only individual menu items to render highlight.

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Adolfo Jayme Barrientos 2015-05-22 16:29:13 UTC
*** Bug 91465 has been marked as a duplicate of this bug. ***
Comment 8 pierre-yves samyn 2015-05-23 11:13:58 UTC
Hi

I do not know whether to open a new Issue for the same effect in Base: open a database and move the mouse, database objects in the left sidebar (tables, forms ...) flickers.

Regards
Pierre-Yves
Comment 9 Gordo 2015-05-23 12:36:48 UTC
Flicker present in Style and Font drop-downs on the toolbar and also the ruler.

The menu name is white.  I don't know if that is intended.

Windows Vista 64
Version: 5.1.0.0.alpha1+
Build ID: d8208da8576874fdb07014287e6cbc0aeba741bb
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-23_09:23:03
Comment 10 Adolfo Jayme Barrientos 2015-05-23 13:34:03 UTC
*** Bug 91517 has been marked as a duplicate of this bug. ***
Comment 11 tommy27 2015-05-24 10:24:20 UTC
*** Bug 91573 has been marked as a duplicate of this bug. ***
Comment 12 Arnaud Versini 2015-05-24 11:20:03 UTC
I tested on master yesterday but not sure wich version I should use, no 5.1 master on the liste.
Comment 13 tommy27 2015-05-28 05:15:51 UTC
*** Bug 91647 has been marked as a duplicate of this bug. ***