tdf#91366 - invalidate only individual menu items to render highlight.

Change-Id: I0dd741829dd315ed86e3fcf79b7fb4da349d0ac8